# optimal_gripper

./: .gitignore  Оптимальный_захват_презентация.pptx
firmware/: WARNINGS!!!!!!!!.txt  команды консоли.txt
hardware/: README.md  КВ33.044.000 - Сортирующая ячейка.iam  КВ33.044.001 - Дно.ipt  КВ33.044.002 - Деражатель мотора.ipt  КВ33.044.002 - Держатель катка.ipt  КВ33.044.002 - Дно блока управления.ipt  КВ33.044.002 - Дно платы .ipt  КВ33.044.002 - ограничитель перемещения по оси Z.ipt  КВ33.044.003 - крепеж дна блока управления.ipt  КВ33.044.004 - Стенка блока управления.ipt  КВ33.044.005 - Крышка блока управления.ipt  КВ33.044.100 - Блок управления.iam  КВ33.044.100 - Захват.iam  КВ33.044.100 - Механизм перемещения захвата.iam  КВ33.044.1000 - Блок управления.iam  КВ33.044.1001 - Дно платы.ipt  КВ33.044.1002 - Плата распределительная.ipt  КВ33.044.1003 - Плата контроля сервомоторами.ipt  КВ33.044.101 - Опора захвата.ipt  КВ33.044.102 - Колесо зубчатое сервомотора.ipt  КВ33.044.200 - Каретка оси Z.iam  КВ33.044.200 - Каретка оси Х.iam  КВ33.044.200 - Сборка зажима.iam  КВ33.044.201 - Опора зажимного механизма.ipt  КВ33.044.201 - Щека каретки Z.ipt  КВ33.044.201 - Щека каретки.ipt  КВ33.044.202 - Фиксатор каретки Z.ipt  КВ33.044.202 - Фиксатор каретки.ipt  КВ33.044.202 -Прихват.ipt  КВ33.044.203 - Прижим ремня.ipt  КВ33.044.203 - Рычаг толстый.ipt  (+75 more)
src/smart_gripper/: CMakeLists.txt  package.xml
src/smart_gripper/launch/: display.launch  gazebo.launch  sim.launch
src/smart_gripper/rviz/: urdf.rviz
src/smart_gripper/urdf/: model.urdf.xacro
(+411 files in other folders)
